<resources>
    <string name="app_name">TestList</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number"><![CDATA[<font color=black><b>№ %s</b></font>]]></string>
    <string name="date"/>
    <string name="sale"><![CDATA[Скидка: <font color=black><b>%s</b></font>]]></string>
    <string name="delivery"><![CDATA[
Доставка: <font color=black><b>%s</b></font>
    ]]></string>
    <string name="for_pay"><![CDATA[
К оплате: <font color=black><b>%s</b></font>
    ]]></string>
    <string name="status"><![CDATA[
Статус заказа: <font color=black><b>%s</b></font>
    ]]></string>
    <string name="repeate">Повторить заказ</string>
    <string name="main_info"><![CDATA[
(цена: <font color=black><b>%s</b></font>, кол-во: <font color=black><b>%s</b></font>, ст-ть: <font color=black><b>%s</b></font>)
    ]]></string>
    <string name="order_sum"><![CDATA[
Сумма заказа: <font color=black><b>%d</b></font>
    ]]></string>
</resources>
